--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -4,9 +4,9 @@ logo_url: /logo.svg
 
 backend:
     name: "github"
-    repo: zankhq/astros
+    repo: neo-art/astros
     branch: main
-    base_url: https://cms.majestico.workers.dev
+    base_url: https://astros-avl.pages.dev
     automatic_deployments: false
 
 media_folder: "public/images"
