--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -6,7 +6,7 @@ backend:
     name: "github"
     repo: neo-art/astros
     branch: main
-    base_url: https://astros-avl.pages.dev
+    base_url: https://cms.majestico.workers.dev
     automatic_deployments: false
 
 media_folder: "public/images"
