--- a/.pages.yml
+++ b/.pages.yml
@@ -1,7 +1,7 @@
 logo_url: /logo.svg
 
 media: "public/images"
-public_folder: "/images"
+#public_folder: "/images"
 
 i18n:
     structure: "multiple_folders"
