--- a/.pages.yml
+++ b/.pages.yml
@@ -1,16 +1,16 @@
 logo_url: /logo.svg
 
 media: "public/images"
-output: "images"
+output: "/images"
 
-#i18n:
-#    structure: "multiple_folders"
-#    locales: ["en", "it"]
-#    default_locale: "en"
+i18n:
+    structure: "multiple_folders"
+    locales: ["en", "it"]
+    default_locale: "en"
 
 content:
     - name: "posts"
-      #i18n: true
+      i18n: true
       label: "Blog Posts"
       path: "src/content/blog"
       create: true
@@ -19,41 +19,41 @@ content:
           - name: "title"
             widget: "string"
             label: "Post Title"
-            #i18n: true
+            i18n: true
           - label: "Draft"
             name: "draft"
             widget: "boolean"
-            #i18n: "duplicate"
+            i18n: "duplicate"
           - label: "Author"
             name: "author"
             widget: "string"
-            #i18n: "duplicate"
+            i18n: "duplicate"
           - label: "Tags"
             name: "tags"
             widget: "list"
-            #i18n: true
+            i18n: true
           - label: "Image"
             name: "image"
             widget: "object"
-            #i18n: true
+            i18n: true
             fields:
                 - { label: Source, name: src, widget: image, i18n: "duplicate" }
                 - { label: Alt Text, name: alt, widget: string, i18n: true }
           - label: "Snippet"
             name: "snippet"
             widget: "text"
-            #i18n: true
+            i18n: true
           - label: "Publish Date"
             name: "publishDate"
             widget: "datetime"
             format: "YYYY-MM-DD HH:mm"
-            #i18n: "duplicate"
+            i18n: "duplicate"
           - label: "Category"
             name: "category"
             widget: "select"
             options: ["Tutorials", "News", "Reviews", "Frameworks"]
-            #i18n: "duplicate"
+            i18n: "duplicate"
           - name: "body"
             widget: "markdown"
             label: "Post Body"
-            #i18n: true
+            i18n: true
