--- a/.pages.yml
+++ b/.pages.yml
@@ -18,43 +18,43 @@ content:
       delete: true
       fields:
           - name: "title"
-            widget: "string"
+            type: "string"
             label: "Post Title"
             i18n: true
           - label: "Draft"
             name: "draft"
-            widget: "boolean"
+            type: "boolean"
             i18n: "duplicate"
           - label: "Author"
             name: "author"
-            widget: "string"
+            type: "string"
             i18n: "duplicate"
           - label: "Tags"
             name: "tags"
-            widget: "list"
+            type: "list"
             i18n: true
           - label: "Image"
             name: "image"
-            widget: "object"
+            type: "object"
             i18n: true
             fields:
-                - { label: Source, name: src, widget: image, i18n: "duplicate" }
-                - { label: Alt Text, name: alt, widget: string, i18n: true }
+                - { label: Source, name: src, type: image, i18n: "duplicate" }
+                - { label: Alt Text, name: alt, type: string, i18n: true }
           - label: "Snippet"
             name: "snippet"
-            widget: "text"
+            type: "text"
             i18n: true
           - label: "Publish Date"
             name: "publishDate"
-            widget: "datetime"
+            type: "datetime"
             format: "YYYY-MM-DD HH:mm"
             i18n: "duplicate"
           - label: "Category"
             name: "category"
-            widget: "select"
+            type: "select"
             options: ["Tutorials", "News", "Reviews", "Frameworks"]
             i18n: "duplicate"
           - name: "body"
-            widget: "markdown"
+            type: "markdown"
             label: "Post Body"
             i18n: true
