Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -64,6 +64,6 @@ content:
           - Frameworks
         i18n: duplicate
       - name: body
-        type: markdown
+        type: rich-text
         label: Post Body
         i18n: true
